--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -1,9 +1,21 @@
 <script language="javascript">
+
 $().ready(function() {
+
+  /* For more examples of configuring the faceting widgets, see the repertoire faceting example
+     application.
+
+     This javascript MVC framework pre-dates much recent work on the web. Using it is not
+     mandatory to take advantage of the rest of the faceting framework. It's perfectly possible
+     (even pleasant) to build a faceted browser directly on D3 and the JSON facet data feeds. */
+
+  /* temporary: delay load until urls parsed */
+  repertoire.defaults.delay_loading = true;
+
   $('#registers').facet_context(function() {
     return {
       search: $("#search").val(),
-      limit: 10,
+      // limit: 10,
       // offset: 10,
       utf8: "%E2%9C%93"
     }
@@ -11,26 +23,41 @@ $().ready(function() {
 
   $('.facet').facet();
   $('.nested_facet').nested_facet();
+
   $('#results').results({
-    limit: 10,
+    // limit: 10,
     // offset: 0
+    type: 'json',
+    injectors: {
+      /* injectors add custom markup (here, a timeline) to elements in the widget matching the css selector. */
+      /* see the Repertoire Faceting FAQ for further info */
+      'div.rep': function(self, registers) {
+        visualize_registers(registers, $(this), { height: 800, width: 600 });
+      }
+    }
   });
+
   $('#registers').urls();
+
 });
 
 </script>
 <div id='registers'>
-  <div class='row-fluid'>
-    <div class='span12'>
-      <div id='season' class='facet' title='Saison'></div>
-      <div id='weekday' class='facet' title='Jour de la semaine'></div>
-      <div id='title1' class='facet' title='Pièce 1'></div>
-      <div id='author1' class='facet' title='Auteur 1'></div>
-      <div id='title2' class='facet' title='Pièce 2'></div>
-      <div id='author2' class='facet' title='Auteur 2'></div>
-    </div>
+  <div class='sidebar left'>
+    <div id='season' class='facet' title='Saison'></div>
+    <div id='title1' class='facet' title='Pièce 1'></div>
+    <div id='author1' class='facet' title='Auteur 1'></div>
   </div>
-  <div class='row-fluid'>
-    <div class='span9' id='results'></div>
+  <div class='sidebar right'>
+    <div id='weekday' class='facet' title='Jour de la semaine'></div>
+    <div id='title2' class='facet' title='Pièce 2'></div>
+    <div id='author2' class='facet' title='Auteur 2'></div>
+  </div>
+  <div class='content'>
+    <div id='results_nav'>Billets vendus, par date</div>
+    <div id='results'>
+      <!-- temporary: feedback during visualization aggregation -->
+      <img src='/assets/repertoire-faceting/spinner_sm.gif'>&nbsp;Loading
+    </div>
   </div>
 </div>
