--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -5,222 +5,6 @@ h2 {
   margin-bottom: 10px;
 }
 
-/** Facet Presentation **/
-
-/* Mostly overridding default bootstrap .label
-   styles so it looks like Christopher intended */
-.rep .facet .values .value .label {
-  position: static; /* Not sure why this is needed, as it *isn't overriding anything in bootstrap...? */
-  background-color: #fff;
-  color: #000099;
-  padding: 0px;
-  font-size: 12px;
-  line-height: 18px;
-  text-shadow: 0 0 0 rgba(0, 0, 0, 0.25);
-  font-weight: normal;
-}
-
-.rep .facet .values .value {
-  white-space: nowrap;
-}
-
-.rep .facet .values .value.selected .label {
-  font-weight: bold;
-}
-
-.bar_facet .rep .facet .values {
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-#navbar {
-  width: 700px;
-  max-width: 700px;
-  position: relative;
-  margin-top:5px;
-  margin-left:500px;
-}
-
-#navbar span {
-  margin: 10px;
-  color: #000099;
-  font-size: 12px;
-  line-height: 18px;
-}
-
-#navbar span:hover {
-  border-bottom-color: green;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-div#results small {
-  font-size: 8px;
-  color: gray;
-}
-
-div#results {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 700px;
-  margin: 0;
-  text-align: left;
-/*  overflow-y:scroll; height: 100%; */
-  margin-top: 20px;
-  margin-bottom:40px;
-}
-
-.tab {
-  background: blue;
-  min-width: 80px;
-  float: left;
-  clear: none;}
-
-.register_all {
-  padding: 2px;
-  background: #FCFCFC;
-  margin: 5px;
-}
-
-.register_all dl.dl-horizontal {
-  padding: 5px;
-  margin: 5px;
-  border: thin #aaaadd dotted;
-}
-
-div.date {
-  margin-bottom: 8px;
-}
-
-div.receipts {
-  margin-top: 5px;
-  margin-bottom: 10px;
-}
-
-div.play {
-  margin-bottom: 10px;
-}
-
-div#results dt {
-  font-size: 12px;
-  font-weight: normal;
-  float: left;
-  width: 120px;
-  color: #aaaadd;
-}
-
-div#results .quantity {
-  display: inline;
-  margin-right: 4px;
-  font-size: 9pt;
-  color: black;
-}
-
-div#results .price {
-  text-align: left;
-  font-size: 9pt;
-  float: left;
-}
-
-div#results .total {
-  text-align: right;
-  border-bottom: thin #aaaadd dotted;
-  width: 240px;
-}
-
-div#timeline {
-  position: absolute;
-  left: 50px;
-  top: 30px;
-  width: 750px;
-  height: 750px;
-  margin-top: 20px;
-  margin-bottom:40px;
-}
-
-div#facets1 {
-  position: absolute;
-  left: 700px;
-  top: 0px;
-}
-
-div#facets2 {
-  position: absolute;
-  left: 950px;
-  top: 0px;
-}
-
-div#facets3 {
-  position: absolute;
-  left: 700px;
-  top: 480px;
-  padding-bottom: 50px; /* accommodate the bottom title bar */
-}
-
-div#facets3 .bar_facet {
-  float: left;
-  clear: none;
-  margin-top: 4px;
-  margin-right: 3px;
-}
-
-div#results_nav {
-  text-align: center;
-  margin: 12px;
-}
-
-/* facets with low cardinality need extra space */
-div#genre1 div.count {
-  padding-right: 12px;
-}
-div#genre2 div.count {
-  padding-right: 12px;
-}
-
-
-/** CY: temporary; figure out how to get svg panel to resize based on css **/
-div#total_receipts div.facet div.values         { width: 160px; height: 600px; }
-div#parterre_receipts div.facet div.values      { width: 160px; height: 600px; }
-div#premiere_loge_receipts div.facet div.values { width: 160px; height: 600px; }
-
-div#total_receipts div.facet         { width: 160px }
-div#parterre_receipts div.facet      { width: 160px }
-div#premiere_loge_receipts div.facet { width: 160px }
-
-
-/* feedback during visualization aggregation */
-#results:not(.loading) ~ #navbar img.spinner {
-  visibility: hidden;
-}
-
-
-/** Visualization Presentation **/
-
-.legend text {
-  font-size: 11px;
-}
-
-.days path,
-.weeks path,
-.months path {
-  stroke: #fff;
-  stroke-width: 1px;
-}
-
-.months text {
-  font-size: 11px;
-}
-
-.axis text {
-  font-size: 7px;
-  font-weight: 300;
-}
-
-div.register_data {
-  border-top: 1px solid black;
-  font-size: 14px;
-}
 
 /** Form Presentation **/
 div#register_form table {
@@ -261,8 +45,8 @@ img#register_image {
 }
 
 #container {
-  margin: auto;
-  width: 1124px;
+  overflow: auto;
+  width: 100%
 }
 
 .ui-resizable-handle {
