Commented out premiere loge graph facet

--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -241,9 +241,9 @@ $().ready(function() {
   $('#title2').facet($.extend({}, close_injectors, search_injectors, { title : "Pièce 2" }));
   $('#genre2').facet($.extend({}, close_injectors, search_injectors, { title : "Genre 2"}));
 
-  $('#total_receipts').bar_facet($.extend({}, close_injectors, { width : 155 } ));
-  $('#parterre_receipts').bar_facet($.extend({}, close_injectors, { width : 155 } ));
-  $('#premiere_loge_receipts').bar_facet($.extend({}, close_injectors, { width : 155 } ));
+  $('#total_receipts').bar_facet($.extend({}, close_injectors, { width: 240 } ));
+  $('#parterre_receipts').bar_facet($.extend({}, close_injectors, { width: 240 } ));
+//  $('#premiere_loge_receipts').bar_facet($.extend({}, close_injectors, { width : 155 } ));
 
   // regular list view
   $('#results').infinite_results({ type: 'html' });
