--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -233,7 +233,7 @@ $().ready(function() {
 <div id='registers'>
   <div id='results'></div>
   <div id='navbar'>
-    <div id="banner">Projet des registres de la Comédie-Française</div>
+    <div id="banner"><%= link_to 'Projet des registres de la Comédie-Française' %></div>
     <div id="tabs">
       <img class="spinner" src="/assets/repertoire-faceting/spinner_sm.gif"></img>
     </div>
