--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -206,14 +206,40 @@ $().ready(function() {
       }
     };
 
+  // search functionality: (via jquery only) toggle display of facet values that match search field
+  jQuery.expr[':'].containsCaseInsensitive = function(a,i,m){
+      return (a.textContent || a.innerText || "").toUpperCase().indexOf(m[3].toUpperCase())>=0;
+  };
+
+  var search_injectors = {
+      injectors: {
+        '.title .controls' : function(self, data) {
+          $(this).append('<input type="search" name="search_values">')
+        }
+      },
+      handlers: {
+        'input!.title .controls input' : function(self) {
+          var filter = $(this).val().replace(')', '');
+          var $values = $(this).closest('.facet').find('.value');
+
+          if(filter) {
+            $values.find(":not(:containsCaseInsensitive(" + filter + "))").parent().hide();
+            $values.find(":containsCaseInsensitive(" + filter + ")").parent().show();
+          } else {
+            $values.show();
+          }
+        }
+      }
+  }
+
   $('#season').facet($.extend({}, close_injectors, { title : "Saison" }));
-  $('#author1').facet($.extend({}, close_injectors, { title : "Auteur 1" }));
-  $('#title1').facet($.extend({}, close_injectors, { title : "Pièce 1" }));
-  $('#genre1').facet($.extend({}, close_injectors, { title : "Genre 1" }));
+  $('#author1').facet($.extend({}, close_injectors, search_injectors, { title : "Auteur 1" }));
+  $('#title1').facet($.extend({}, close_injectors, search_injectors, { title : "Pièce 1" }));
+  $('#genre1').facet($.extend({}, close_injectors, search_injectors, { title : "Genre 1" }));
   $('#weekday').facet($.extend({}, close_injectors, { title : "Jour de la semaine" }));
-  $('#author2').facet($.extend({}, close_injectors, { title : "Auteur 2" }));
-  $('#title2').facet($.extend({}, close_injectors, { title : "Pièce 2" }));
-  $('#genre2').facet($.extend({}, close_injectors, { title : "Genre 2"}));
+  $('#author2').facet($.extend({}, close_injectors, search_injectors, { title : "Auteur 2" }));
+  $('#title2').facet($.extend({}, close_injectors, search_injectors, { title : "Pièce 2" }));
+  $('#genre2').facet($.extend({}, close_injectors, search_injectors, { title : "Genre 2"}));
 
   $('#total_receipts').bar_facet($.extend({}, close_injectors, { width : 155 } ));
   $('#parterre_receipts').bar_facet($.extend({}, close_injectors, { width : 155 } ));
